Updated Projects Section

--- a/index.html
+++ b/index.html
@@ -180,53 +180,9 @@
         </div>
         <div class="container-fluid bg-dark">
             <div class="row no-gutter">
+                <!-- Movie Trailer Website Project -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project1">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption portfolio-bg-pink">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Full-Stack Project
-                                </div>
-                                <div class="project-name">
-                                    Safety Management System
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project2">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption portfolio-bg-blue">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Full-Stack Project
-                                </div>
-                                <div class="project-name">
-                                    Craft Store
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project3">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption portfolio-bg-pink">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Third Demension Project
-                                </div>
-                                <div class="project-name">
-                                    F-14 Tomcat
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project4">
                         <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="Movie Trailer Website">
                         <div class="portfolio-box-caption portfolio-bg-blue">
                             <div class="portfolio-box-caption-content">
@@ -240,13 +196,62 @@
                         </div>
                     </a>
                 </div>
+                <!-- Porfolio Page MK-1 -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project2">
+                        <img src="img/portfolio/fullsize/concept2portfolio.jpg" class="img-responsive" alt="concept to porfolio">
+                        <div class="portfolio-box-caption portfolio-bg-pink">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Design Concept to HTML/CSS
+                                </div>
+                                <div class="project-name">
+                                    Porfolio Page Mk.1
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- Safety Management System -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project3">
+                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption portfolio-bg-pink">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Full-Stack Project
+                                </div>
+                                <div class="project-name">
+                                    Safety Management System
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- Craft Store Page -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project4">
+                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption portfolio-bg-blue">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Full-Stack Project
+                                </div>
+                                <div class="project-name">
+                                    Online Craft Store
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- 3D Projects -->           
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project5">
                         <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption portfolio-bg-pink">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Third Demension Project
+                                    Third Dimension
                                 </div>
                                 <div class="project-name">
                                     BMW M3
@@ -255,16 +260,17 @@
                         </div>
                     </a>
                 </div>
+                <!-- Photography -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project6">
                         <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption portfolio-bg-blue">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Back-End Project
+                                    Second Dimension
                                 </div>
                                 <div class="project-name">
-                                    SMS Database
+                                    Photography
                                 </div>
                             </div>
                         </div>
@@ -273,9 +279,7 @@
             </div>
         </div>
     </section>
-
-
-
+<!-- Contact Secion -->
     <section class="bg-tertiary" id="contact">
         <div class="container bg-fade">
             <div class="row">
@@ -413,7 +417,7 @@
     </div>
 </div>
 
-<!-- Project 1: ___ Large modal -->
+<!-- Project 1: Movie Website Large modal -->
 <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project1">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content bg-dark">
@@ -423,11 +427,20 @@
             <div class="modal-body text-dark">
                 <div class="row">
                     <div class="col-lg-12 text-left">
-                        <h1>Under Construction</h1>
+                        <h1>Movie Trailer Website</h1>
                         <hr class="primary">
                     </div>
                     <div class="col-lg-12">
-                        <p>This project is still under construction.</p>
+                        <p>This project demonstrates my competency of using OOP in Python to generate HTML.</p>
+                        <p>Server side code written in Python generates a static web page using a list of my faviorite movies, including box art imagry and a movie trailer url.</p>
+                        <div class = "col-lg-12 text-center px20-padding">
+                            <div class="px20-padding col-md-6 text-center">
+                                <a href="https://github.com/JTP709/fav-movies-website" class="btn btn-modal btn-xl sr-button">Z:>_Github</a>
+                            </div>
+                            <div class = "px20-padding col-md-6 text-center">
+                                <a href="projects/movie_website/revs_movie.html" class="btn btn-modal btn-xl sr-button">Z:>_Web Page</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -438,7 +451,7 @@
     </div>
 </div>
 
-<!-- Project 2: ___ Large modal -->
+<!-- Project 2: Porfolio Mk.1 Large modal -->
 <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project2">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content bg-dark">
@@ -448,11 +461,21 @@
             <div class="modal-body text-dark">
                 <div class="row">
                     <div class="col-lg-12 text-left">
-                        <h1>Under Construction</h1>
+                        <h1>Porfolio Mk.1</h1>
                         <hr class="primary">
                     </div>
                     <div class="col-lg-12">
-                        <p>This project is still under construction.</p>
+                        <p>My first portfolio page demonstrates my ability to design an HTML/CSS markup site based off of a conceptual design.</p>
+                        <p>Additional assignment instructions were to add some personalization, hence the differences in the logo, name, and project photos.</p>
+                        <img src="img/portfolio/fullsize/concept2portfolio.jpg" class="img-responsive" alt="concept to porfolio">
+                        <div class = "col-lg-12 text-center px20-padding">
+                            <div class="px20-padding col-md-6 text-center">
+                                <a href="https://github.com/JTP709/porfolio_project" class="btn btn-modal btn-xl sr-button">Z:>_Github</a>
+                            </div>
+                            <div class = "px20-padding col-md-6 text-center">
+                                <a href="projects/portfolio_project_jonprell/main.html" target= "_blank" class="btn btn-modal btn-xl sr-button">Z:>_Web Page</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -488,8 +511,8 @@
     </div>
 </div>
 
-<!-- Project 4: Movie Website Large modal -->
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project4">
+<!-- Project 5: ___ Large modal -->
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project5">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content bg-dark">
             <div class="modal-header">
@@ -498,20 +521,11 @@
             <div class="modal-body text-dark">
                 <div class="row">
                     <div class="col-lg-12 text-left">
-                        <h1>Movie Trailer Website</h1>
+                        <h1>Under Construction</h1>
                         <hr class="primary">
                     </div>
                     <div class="col-lg-12">
-                        <p>This project demonstrates my competency of using OOP in Python to generate HTML.</p>
-                        <p>Server side code written in Python generates a static web page using a list of my faviorite movies, including box art imagry and a movie trailer url.</p>
-                        <div class = "col-lg-12 text-center px20-padding">
-                            <div class="px20-padding col-md-6 text-center">
-                                <a href="http://www.github.com" class="btn btn-modal btn-xl sr-button">Z:>_Github</a>
-                            </div>
-                            <div class = "px20-padding col-md-6 text-center">
-                                <a href="projects/movie_website/revs_movie.html" class="btn btn-modal btn-xl sr-button">Z:>_Web Page</a>
-                            </div>
-                        </div>
+                        <p>This project is still under construction.</p>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -521,7 +535,6 @@
         </div>
     </div>
 </div>
-
 
 <!-- Project 5: ___ Large modal -->
 <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project5">
