Fixed Projects page bug

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         <img src="img/portfolio/fullsize/concept2portfolio.jpg" class="img-responsive" alt="concept to porfolio">
                         <div class = "col-lg-12 text-center px20-padding">
                             <div class="px20-padding col-md-6 text-center">
-                                <a href="https://github.com/JTP709/porfolio_project" class="btn btn-modal btn-xl sr-button">Z:>_Github</a>
+                                <a href="https://github.com/JTP709/porfolio_project" target= "_blank" class="btn btn-modal btn-xl sr-button">Z:>_Github</a>
                             </div>
                             <div class = "px20-padding col-md-6 text-center">
                                 <a href="projects/portfolio_project_jonprell/main.html" target= "_blank" class="btn btn-modal btn-xl sr-button">Z:>_Web Page</a>
