--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="blog/main.html">Blog</a>
+                        <a class="page-scroll" href="construction.html">Blog</a>
                     </li>
                 </ul>
             </div>
@@ -116,7 +116,7 @@
             </div>
             <div class = "col-lg-12 text-center px20-padding">
                 <div class="px20-padding col-md-6 text-center">
-                    <a href="blog/main.html" class="page-scroll btn btn-default btn-xl sr-button">Z:>_ BLOG</a>
+                    <a href="construction.html" class="page-scroll btn btn-default btn-xl sr-button">Z:>_ BLOG</a>
                 </div>
                 <div class = "px20-padding col-md-6 text-center">
                     <button class="page-scroll btn btn-default btn-xl sr-button" data-toggle="modal" data-target="#resume">Z:>_ RESUME</button>
@@ -247,7 +247,7 @@
                 <!-- 3D Projects -->           
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project5">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption portfolio-bg-pink">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -292,7 +292,7 @@
                     <a href="http://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-3x sr-contact"></i></a>
                 </div>
                 <div class="col-md-2 text-center text-faded">
-                    <a href="contact.html" target="_blank"><i class="fa fa-envelope-o fa-3x sr-contact"></i></a>
+                    <a href="construction.html" target="_blank"><i class="fa fa-envelope-o fa-3x sr-contact"></i></a>
                 </div>
                 <div class="col-md-2 text-center text-faded">
                     <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-3x sr-contact"></i></a>
