--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <!-- Movie Trailer Website Project -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project1">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="Movie Trailer Website">
+                        <img src="img/portfolio/thumbnails/movies.jpg" class="img-responsive" alt="Movie Trailer Website">
                         <div class="portfolio-box-caption portfolio-bg-blue">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -199,7 +199,7 @@
                 <!-- Porfolio Page MK-1 -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project2">
-                        <img src="img/portfolio/fullsize/concept2portfolio.jpg" class="img-responsive" alt="concept to porfolio">
+                        <img src="img/portfolio/thumbnails/concept2portfolio.jpg" class="img-responsive" alt="concept to porfolio">
                         <div class="portfolio-box-caption portfolio-bg-pink">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -435,10 +435,10 @@
                         <p>Server side code written in Python generates a static web page using a list of my faviorite movies, including box art imagry and a movie trailer url.</p>
                         <div class = "col-lg-12 text-center px20-padding">
                             <div class="px20-padding col-md-6 text-center">
-                                <a href="https://github.com/JTP709/fav-movies-website" class="btn btn-modal btn-xl sr-button">Z:>_Github</a>
+                                <a href="https://github.com/JTP709/fav-movies-website" target="_blank" class="btn btn-modal btn-xl sr-button">Z:>_Github</a>
                             </div>
                             <div class = "px20-padding col-md-6 text-center">
-                                <a href="projects/movie_website/revs_movie.html" class="btn btn-modal btn-xl sr-button">Z:>_Web Page</a>
+                                <a href="projects/movie_website/revs_movie.html" target="_blank" class="btn btn-modal btn-xl sr-button">Z:>_Web Page</a>
                             </div>
                         </div>
                     </div>
