--- a/projects/movie_website/revs_movie.html
+++ b/projects/movie_website/revs_movie.html
@@ -104,7 +104,7 @@
       <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand nav-font" href="../main.html"><b style="color: #EDED13">Jon's Top Movies</b></a>
+            <a class="navbar-brand nav-font" href="../../index.html"><b style="color: #EDED13">Jon's Top Movies</b></a>
           </div>
         </div>
       </div>
