Updated Contact CSS and removed createive.min.css (not in use)

--- a/index.html
+++ b/index.html
@@ -289,16 +289,16 @@
                     <p>Ready to start your next project with me? That's great! Contact me through your preferred method below and I will respond as soon as possible!</p>
                 </div>
                 <div class="col-md-2 col-lg-offset-2 text-center text-faded">
-                    <a href="http://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-3x sr-contact"></i></a>
+                    <a href="http://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-3x sr-contact icons_color"></i></a>
                 </div>
                 <div class="col-md-2 text-center text-faded">
-                    <a href="construction.html" target="_blank"><i class="fa fa-envelope-o fa-3x sr-contact"></i></a>
+                    <a href="construction.html" target="_blank"><i class="fa fa-envelope-o fa-3x sr-contact icons_color"></i></a>
                 </div>
                 <div class="col-md-2 text-center text-faded">
-                    <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-3x sr-contact"></i></a>
+                    <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-3x sr-contact icons_color"></i></a>
                 </div>
                 <div class="col-md-2 text-center text-faded">
-                    <a href="http://www.github.com" target="_blank"><i class="fa fa-github fa-3x sr-contact"></i></a>
+                    <a href="http://www.github.com" target="_blank"><i class="fa fa-github fa-3x sr-contact icons_color"></i></a>
                 </div>
             </div>
         </div>
@@ -410,7 +410,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
