--- a/index.html
+++ b/index.html
@@ -139,21 +139,21 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-tablet text-primary sr-icons"></i>
                         <h3>FRONT END APPLICITY</h3>
                         <p class="text-muted text-a-font text-left">You're probably thinking "This guy doesn't know how to spell!" or "Is 'Applicity' really a word?" No need to reach for your dictionary, it isn't a real word. It's simply my approach to front-end design. I believe that applicable simplicity should drive design. End-users don't want to spend time trying to figure out how to use an application when they need to be putting that app to use!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-server text-primary sr-icons"></i>
                         <h3>BACK END EFFECIENCY</h3>
                         <p class="text-muted text-left text-a-font">A lot goes on behind the scenes to keep your app moving. Anyting that takes longer than 3 seconds to load is unacceptable. I implement the latest programming paradigms to grease the gears ensure your server is high speed, low drag.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-paint-brush text-primary sr-icons"></i>
                         <h3>EXPRESSION OR IMAGINATION?</h3>
                         <p class="text-muted text-a-font text-left">My work is where the right brain and left brain come together. Understanding the logic behind the science of our world allows me to explore the limits of human creativity.</p>
                     </div>
