Added comments for each HTML section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 <body id="page-top">
 
+<!-- Navigation Bar -->
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -72,14 +73,14 @@
         <!-- /.container-fluid -->
     </nav>
 
+<!-- Header Photo contained in header-content-inner class -->
     <header>
         <div class="header-content">
-            <div class="header-content-inner">
-                <a href="#about"></a>
-            </div>
+            <div class="header-content-inner"></div>
         </div>
     </header>
 
+<!-- About Me Section -->
     <section class="bg-primary" id="about">
         <div class="container bg-fade">
             <div class="row">
@@ -123,9 +124,9 @@
                 </div>
             </div>
         </div>
-
     </section>
 
+<!-- Services Section -->
     <section class="bg-dark" id="services" style="padding-top: 20px">
         <div class="container">
             <div class="row">
@@ -169,6 +170,7 @@
         </div>
     </section>
 
+<!-- Portfolio Section -->
     <section class="no-padding bg-dark" id="portfolio">
         <div class="container">
             <div class="row">
@@ -279,6 +281,7 @@
             </div>
         </div>
     </section>
+
 <!-- Contact Secion -->
     <section class="bg-tertiary" id="contact">
         <div class="container bg-fade">
@@ -317,6 +320,8 @@
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
+
+<!-- MODALS -->
 
 <!-- Resume modal -->
 <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="resume">
