removed styles from HTML and added them to CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h1 class="section-heading">Z:>_ About Me:</h1>
                     <hr class="light">
-                    <p class="text-faded text-left" style="font-size: 28px">My name is <b>Jon Prell</b> and I am a full-stack web developer. From Concept to Deployment, I have all of the skills needed to bring your project to life.</p>
-                    <div class="col-lg-12" style="font-size: 25px">
+                    <p class="text-faded text-left about_me_28">My name is <b>Jon Prell</b> and I am a full-stack web developer. From Concept to Deployment, I have all of the skills needed to bring your project to life.</p>
+                    <div class="col-lg-12 about_me_25">
                         <div class="col-md-6 text-left">
                             <ul class="text-faded">
-                            <h3 style="font-size: 28px"><b>Front-End Skills:</b></h3>
+                            <h3 class="about_me_28"><b>Front-End Skills:</b></h3>
                             <li>HTML 5</li>
                             <li>CSS 3</li>
                             <li>JavaScript</li>
@@ -101,7 +101,7 @@
                         </div>
                         <div class="col-md-6 text-left">
                             <ul class="text-faded">
-                            <h3 style="font-size: 28px"><b>Back End Skills:</b></h3>
+                            <h3 class="about_me_28"><b>Back End Skills:</b></h3>
                             <li>Python</li>
                             <li>Flask</li>
                             <li>PostgreSQL</li>
@@ -127,7 +127,7 @@
     </section>
 
 <!-- Services Section -->
-    <section class="bg-dark" id="services" style="padding-top: 20px">
+    <section class="bg-dark" id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
