--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                     <p class="text-faded text-left about_me_28">My name is <b>Jon Prell</b> and I am a full-stack web developer. From Concept to Deployment, I have all of the skills needed to bring your project to life.</p>
                     <div class="col-lg-12 about_me_25">
                         <div class="col-md-6 text-left">
-                            <ul class="text-faded">
                             <h3 class="about_me_28"><b>Front-End Skills:</b></h3>
+                            <ul class="text-faded">
                             <li>HTML 5</li>
                             <li>CSS 3</li>
                             <li>JavaScript</li>
@@ -100,8 +100,8 @@
                             </ul>
                         </div>
                         <div class="col-md-6 text-left">
-                            <ul class="text-faded">
                             <h3 class="about_me_28"><b>Back End Skills:</b></h3>
+                            <ul class="text-faded">
                             <li>Python</li>
                             <li>Flask</li>
                             <li>PostgreSQL</li>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="col-lg-8 col-lg-offset-2 text-center">
-                        </br>
+                        <br>
                         <h1 class="text-faded">More Information:</h1>
                     </div>
                 </div>
@@ -324,11 +324,11 @@
 <!-- MODALS -->
 
 <!-- Resume modal -->
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="resume">
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" id="resume">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content bg-dark">
             <div class="modal-header">
-                <h3 class="modal-title" id="myModalLabel">Resume</h3>
+                <h3 class="modal-title">Resume</h3>
             </div>
             <div class="modal-body text-dark">
                 <div class="row">
@@ -423,11 +423,11 @@
 </div>
 
 <!-- Project 1: Movie Website Large modal -->
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project1">
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" id="project1">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content bg-dark">
             <div class="modal-header">
-                <h3 class="modal-title" id="myModalLabel">Project</h3>
+                <h3 class="modal-title">Project</h3>
             </div>
             <div class="modal-body text-dark">
                 <div class="row">
@@ -457,11 +457,11 @@
 </div>
 
 <!-- Project 2: Porfolio Mk.1 Large modal -->
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project2">
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" id="project2">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content bg-dark">
             <div class="modal-header">
-                <h3 class="modal-title" id="myModalLabel">Project</h3>
+                <h3 class="modal-title">Project</h3>
             </div>
             <div class="modal-body text-dark">
                 <div class="row">
@@ -492,11 +492,36 @@
 </div>
 
 <!-- Project 3: ___ Large modal -->
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project3">
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" id="project3">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content bg-dark">
             <div class="modal-header">
-                <h3 class="modal-title" id="myModalLabel">Project</h3>
+                <h3 class="modal-title">Project</h3>
+            </div>
+            <div class="modal-body text-dark">
+                <div class="row">
+                    <div class="col-lg-12 text-left">
+                        <h1>Under Construction</h1>
+                        <hr class="primary">
+                    </div>
+                    <div class="col-lg-12">
+                        <p>This project is still under construction.</p>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Project 4: ___ Large modal -->
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" id="project4">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content bg-dark">
+            <div class="modal-header">
+                <h3 class="modal-title">Project</h3>
             </div>
             <div class="modal-body text-dark">
                 <div class="row">
@@ -517,36 +542,11 @@
 </div>
 
 <!-- Project 5: ___ Large modal -->
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project5">
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" id="project5">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content bg-dark">
             <div class="modal-header">
-                <h3 class="modal-title" id="myModalLabel">Project</h3>
-            </div>
-            <div class="modal-body text-dark">
-                <div class="row">
-                    <div class="col-lg-12 text-left">
-                        <h1>Under Construction</h1>
-                        <hr class="primary">
-                    </div>
-                    <div class="col-lg-12">
-                        <p>This project is still under construction.</p>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Project 5: ___ Large modal -->
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project5">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content bg-dark">
-            <div class="modal-header">
-                <h3 class="modal-title" id="myModalLabel">Project</h3>
+                <h3 class="modal-title">Project</h3>
             </div>
             <div class="modal-body text-dark">
                 <div class="row">
@@ -567,11 +567,11 @@
 </div>
 
 <!-- Project 6: ___ Large modal -->
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="project6">
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" id="project6">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content bg-dark">
             <div class="modal-header">
-                <h3 class="modal-title" id="myModalLabel">Project</h3>
+                <h3 class="modal-title">Project</h3>
             </div>
             <div class="modal-body text-dark">
                 <div class="row">
