Reworded both the About Me and Skills Sections

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#skills">Skills</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -87,28 +87,39 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h1 class="section-heading">Z:>_ About Me:</h1>
                     <hr class="light">
-                    <p class="text-faded text-left about_me_28">My name is <b>Jon Prell</b> and I am a full-stack web developer. From Concept to Deployment, I have all of the skills needed to bring your project to life.</p>
-                    <div class="col-lg-12 about_me_25">
-                        <div class="col-md-6 text-left">
-                            <h3 class="about_me_28"><b>Front-End Skills:</b></h3>
-                            <ul class="text-faded">
-                            <li>HTML 5</li>
-                            <li>CSS 3</li>
-                            <li>JavaScript</li>
-                            <li>Bootstrap</li>
-                            <li>React</li>
-                            </ul>
+                    <p class="text-faded text-left about_me_25">My name is <b>Jon Prell</b> and I am a full-stack web developer. From Concept to Deployment, I have all of the skills needed to bring your project to life.</p>
+
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                                <i class="fa fa-4x fa-tablet text-primary sr-icons"></i>
+                                <h3>FRONT END APPLICITY</h3>
+                                <p class="text-a-font text-left">You're probably thinking "This guy doesn't know how to spell!" or "Is 'Applicity' really a word?" No need to reach for your dictionary, it isn't a real word. It's simply my approach to front-end design. I believe that applicable simplicity should drive design. End-users don't want to spend time trying to figure out how to use an application when they need to be putting that app to use!</p>
+                            </div>
                         </div>
-                        <div class="col-md-6 text-left">
-                            <h3 class="about_me_28"><b>Back End Skills:</b></h3>
-                            <ul class="text-faded">
-                            <li>Python</li>
-                            <li>Flask</li>
-                            <li>PostgreSQL</li>
-                            <li>Communicating with Humans</li>
-                            </ul>
+                        <div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                                <i class="fa fa-4x fa-server text-primary sr-icons"></i>
+                                <h3>BACK END EFFECIENCY</h3>
+                                <p class="text-left text-a-font">A lot goes on behind the scenes to keep your app moving. Anyting that takes longer than 3 seconds to load is unacceptable. I implement the latest programming paradigms to grease the gears ensure your server is high speed, low drag.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                                <i class="fa fa-4x fa-paint-brush text-primary sr-icons"></i>
+                                <h3>IMAGINATION TO CREATE</h3>
+                                <p class="text-a-font text-left">My work is where the right brain and left brain come together. Understanding the logic behind the science of our world allows me to explore the limits of human creativity.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                                <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                                <h3>ENGINEERED WITH LOVE</h3>
+                                <p class="text-a-font text-left">Isn't it love that makes you - er, i mean us - human?</p>
+                            </div>
                         </div>
                     </div>
+
                     <div class="col-lg-8 col-lg-offset-2 text-center">
                         <br>
                         <h1 class="text-faded">More Information:</h1>
@@ -126,44 +137,61 @@
         </div>
     </section>
 
-<!-- Services Section -->
-    <section class="bg-dark" id="services">
+<!-- Skills Section -->
+    <section class="bg-dark" id="skills">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Z:>_ Services</h2>
+                    <h2 class="section-heading">Z:>_ Skills</h2>
             		<hr class="primary">
             	</div>
             </div>
         </div>
         <div class="container">
+
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-tablet text-primary sr-icons"></i>
-                        <h3>FRONT END APPLICITY</h3>
-                        <p class="text-muted text-a-font text-left">You're probably thinking "This guy doesn't know how to spell!" or "Is 'Applicity' really a word?" No need to reach for your dictionary, it isn't a real word. It's simply my approach to front-end design. I believe that applicable simplicity should drive design. End-users don't want to spend time trying to figure out how to use an application when they need to be putting that app to use!</p>
+                        <i class="fa fa-5x fa-tablet text-primary sr-icons"></i>
+                        <h2>FRONT END</h2>
+                        <ul class="text-muted text-a-font text-left about_me_23">
+                        <li>HTML 5</li>
+                        <li>CSS 3</li>
+                        <li>JavaScript</li>
+                        <li>j.Query</li>
+                        <li>Bootstrap</li>
+                        <li>React</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-server text-primary sr-icons"></i>
-                        <h3>BACK END EFFECIENCY</h3>
-                        <p class="text-muted text-left text-a-font">A lot goes on behind the scenes to keep your app moving. Anyting that takes longer than 3 seconds to load is unacceptable. I implement the latest programming paradigms to grease the gears ensure your server is high speed, low drag.</p>
+                        <i class="fa fa-5x fa-server text-primary sr-icons"></i>
+                        <h2>BACK END</h2>
+                        <ul class="text-muted text-a-font text-left about_me_23">
+                        <li>Python</li>
+                        <li>Flask</li>
+                        <li>PostgreSQL</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paint-brush text-primary sr-icons"></i>
-                        <h3>EXPRESSION OR IMAGINATION?</h3>
-                        <p class="text-muted text-a-font text-left">My work is where the right brain and left brain come together. Understanding the logic behind the science of our world allows me to explore the limits of human creativity.</p>
+                        <i class="fa fa-5x fa-paint-brush text-primary sr-icons"></i>
+                        <h2>DATABASE</h2>
+                        <ul class="text-muted text-a-font text-left about_me_23">
+                        <li>SQL</li>
+                        <li>SQLite</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>ENGINEERED WITH LOVE</h3>
-                        <p class="text-muted text-a-font text-left">Isn't it love that makes you - er, i mean us - human?</p>
+                        <i class="fa fa-5x fa-heart text-primary sr-icons"></i>
+                        <h2>LIFE</h2>
+                        <ul class="text-muted text-a-font text-left about_me_23">
+                        <li>Communicating with Humans</li>
+                        </ul>
                     </div>
                 </div>
             </div>
