Added Portrait photo to About Me

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h1 class="section-heading">Z:>_ About Me:</h1>
                     <hr class="light">
+                    <img src="img/blog/archer.jpg" class="img-responsive" id="portrait_img" alt="Self Portrait">
+                    <hr class="light">
                     <p class="text-faded text-left about_me_25">My name is <b>Jon Prell</b> and I am a full-stack web developer. From Concept to Deployment, I have all of the skills needed to bring your project to life.</p>
 
                     <div class="row">
@@ -245,7 +247,7 @@
                 <!-- Safety Management System -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project3">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="under construction">
                         <div class="portfolio-box-caption portfolio-bg-pink">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -261,7 +263,7 @@
                 <!-- Craft Store Page -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project4">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="under construction">
                         <div class="portfolio-box-caption portfolio-bg-blue">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -277,7 +279,7 @@
                 <!-- 3D Projects -->           
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project5">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="under construction">
                         <div class="portfolio-box-caption portfolio-bg-pink">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -293,7 +295,7 @@
                 <!-- Photography -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box" data-toggle="modal" data-target="#project6">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="under construction">
                         <div class="portfolio-box-caption portfolio-bg-blue">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
