Changed Icons in Skills Section

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-5x fa-paint-brush text-primary sr-icons"></i>
+                        <i class="fa fa-5x fa-database text-primary sr-icons"></i>
                         <h2>DATABASE</h2>
                         <ul class="text-muted text-a-font text-left about_me_23">
                         <li>SQL</li>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-5x fa-heart text-primary sr-icons"></i>
+                        <i class="fa fa-5x fa-smile-o text-primary sr-icons"></i>
                         <h2>LIFE</h2>
                         <ul class="text-muted text-a-font text-left about_me_23">
                         <li>Communicating with Humans</li>
